style.css
html {
    font-family: "monospace";
    font-size: large;
    line-height: normal;
}

body {
    color: #bfbfbf;
    background-color: #1e1e1e;
    font-weight: 500;
    max-width: 40em;
    padding: 1em;
    margin: 0 auto;
}

img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    margin-bottom: 1em;
}

hr {
    margin-bottom: 1em;
}

.flex-container {
    display: flex;
}

input {
    background-color: #1e1e1e;
    color: #bfbfbf;
    border: none;
    outline: none;
    font-family: "monospace";
    font-size: large;
    flex-grow: 1;
}

button {
    width: 100%;
    border: none;
    padding: 0.5em;
    margin-top: 1em;
    font-family: "monospace";
    font-size: large;
    font-weight: bold;
    background-color: #2e2e2e;
    color: #bfbfbf;
    transition-duration: 0.2s;
}

button:hover {
    background-color: #4e4e4e;;
}

#spinner {
    width: 40px;
    height: 40px;
    margin: auto;
    margin-top: 1em;
    border-radius: 50%;
    border-top: 4px solid #3498db;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

#msg {
    animation: flash 0.75s alternate infinite;
}

@keyframes flash {
    from { 
        color: #bfbfbf; 
        text-shadow: none;
    }
    to { 
        color: hotpink;
        text-shadow: 0px 0px 20px hotpink;
    }
}

